# aws_lambda_function_examples

./: README.md
java/: pom.xml
java/src/main/java/com/orbitalsoftware/javalambda/: TestLambda.java
java/src/main/resources/: log4j2.xml
rust/: Cargo.toml  debug.sh  release.sh
rust/.cargo/: config
rust/src/: main.rs
