[package]
name = "rust_lambda"
version = "0.1.0"
authors = ["Alexander Polson <alex@alexpolson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# lambda exec must be called bootstrap
[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
rusoto_core = { version = "0.42", default_features = false, features=["rustls"] }
rusoto_dynamodb = { version = "0.42", default_features = false, features=["rustls"] }
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.39"
tracing = "0.1.13"
tracing-futures = "0.2.3"
tracing-error = "0.1.2"
once_cell = "1.4"
